Added resources within folder itself

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h1 class="house-name"></h1>
         <div class="tick"></div>
     </div>
-    <script src="./node_modules/jquery/dist/jquery.js"></script>
-    <script src="./node_modules/timer.js/dist/timer.js"></script>
+    <script src="./jquery.js"></script>
+    <script src="./timer.js"></script>
     <script src="./index.js"></script>
     <script>
         $(function() {
